server/monitor/src/main/resources/org/apache/accumulo/monitor/resources/css/screen.css
/*
* Licensed to the Apache Software Foundation (ASF) under one or more
* contributor license agreements.  See the NOTICE file distributed with
* this work for additional information regarding copyright ownership.
* The ASF licenses this file to You under the Apache License, Version 2.0
* (the "License"); you may not use this file except in compliance with
* the License.  You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
/* basic screen style for all pages */
html,body {
  height: 100%;
  margin: 0;
  padding: 0;
  color: #333333;
  font-size: 10pt;
  font-family: verdana, arial, sans-serif;
}

#banner {
  height: 1.5em;
  font-size: 1.0em;
}

#content-wrapper {
  position: relative;
  min-height: 95%;
}

* #content-wrapper {
  height: 95%;
}

#content {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 1.5em;
  padding-bottom: 0;
}

#header {
  position: absolute;
  padding-top: 0;
  top: 0;
  left: 0;
  right: 0;
  height: 5em;
  color: #c4c4c4;
  background-color: #304065;
  text-align: center;
}

#headertitle {
  /*position: absolute;
  top: -1.0em;
  left: 0.5em;
  right: 1.0em;*/
  font-size: 20pt;
}

#sidebar {
  text-align: left;
}

#subheader {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: .92em;
}

#footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 0;
  /*height: 1.5em;*/
  font-size: 1.0em;
}

#main {
  position: absolute;
  top: 5.0em;
  /*left: 11em;*/
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0.6em;
  /*overflow: scroll;*/
  margin-left: auto;
  margin-right: auto;
  width: 90%;
}

#nav {
  position: absolute;
  top: 0.5em;
  /*left: 0;*/
  right: 0;
  /*bottom: 0;*/
  padding: 0.5em;
  /*width: 10em;*/
  /*color: #304065;*/
  /*background-color: #c4c4c4;*/
  /*text-align: left;*/
  /*height: 3.0em;*/
}

#nav-title {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-size: 1.1em;
}

h1 {
  font-size: 2.2em;
  font-variant: small-caps;
  text-align: center;
}

h2 {
  width: 100%;
  font-size: 1.3em;
  text-align: center;
}

h2.error {
  width: 100%;
  color: #ff0000;
  background-color: #000000;
}

h2.error a {
  color: #ff0000;
  background-color: #000000;
}

caption {
  margin-left: auto;
  margin-right: auto;
}

caption.error {
  color: #ff0000;
  background-color: #000000;
}

hr {
  border: 0;
  height: 1px;
  background-color: #304065;
  color: #304065;
}

table {
  font-size: 9pt;
}

/*
The following is to avoid a problem with the flot
javascript library.  This file sets min-width to 60% 
for all tables.  This make the html generated by
flot.js not work.  Flot creates a class called legend
used in a div that has a child table.  This sets 
min-width to 0 for that child table enabling it
to render correctly.  
*/
div.legend > table {
  min-width: 0%;
}

table.sortable {
  border-left: 0;
  border-right: 0;
  border-top: 1px #333333 dotted;
  border-bottom: 1px #333333 dotted;
}

td {
  border-top: 0;
  border-bottom: 0;
  border-left: 0;
  border-right: 0;
  border-spacing-top: 0;
  border-spacing-bottom: 0;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-top: 0.15em;
  padding-bottom: 0.15em;
  color: #333333;
}

th {
  border-top: 0;
  border-bottom: 3px #333333 solid;
  border-left: 1px #333333 dotted;
  border-right: 0;
  border-spacing-top: 0;
  border-spacing-bottom: 0;
  text-align: center;
  font-variant: small-caps;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  color: #333333;
  font-size: 10pt;
  vertical-align: bottom;
}

td.firstcell {
  border-left: 0;
}

th.sortable {
  color: blue;
}

td.details-control {
    background: url('../images/details_open.png') no-repeat center center;
    cursor: pointer;
}
tr.details td.details-control {
    background: url('../images/details_close.png') no-repeat center center;
}

a {
  text-decoration: none;
  color: #0000ff;
  line-height: 1.5em;
}

a:hover {
  color: #004400;
  text-decoration: underline;
}

a img {
  border: 0px;
}

div.show {
  display: block;
}

div.hide {
  display: none;
}

div.progress-chart {
  border: 1px solid #333333;
  border-spacing: 0;
  width: 150px;
  float: left;
}

div.progress-chart>div {
  height: 20px;
  background-color: #0000ff;
}

pre.logevent {
  margin: 0;
}

.noborder {
  border: 0;
  border-spacing: 0;
  border-bottom: 0;
  border-right: 0;
}

.table-caption {
  font-size: 2em;
  font-variant: small-caps;
  text-align: center;
}

.table-subcaption {
  font-size: 0.9em;
}

.left {
  text-align: left;
}

.right {
  text-align: right;
  margin-right: 0;
}

.align-left {
  float: left;
}

.error, .error a {
  color: #ffffff;
  background-color: #d9534f;
}

.error-inv, .error-inv a {
  color: #d9534f;
}

.warning, .warning a {
  background-color: #f0ad4e;
}

.warning-inv, .warning-inv a {
  color: #f0ad4e;
}

.normal, .normal a {
  background-color: #5cb85c;
}

.normal-inv, .normal-inv a {
  color: #5cb85c;
}

.highlight {
  background-color: #cef4b5;
}

.icon-dot {
  display: inline-block;
  min-width: 1em;
  height: 1em;
  padding: 3px 7px;
  font-size: @font-size-small;
  font-weight: @badge-font-weight;
  color: @badge-color;
  line-height: @badge-line-height;
  vertical-align: middle;
  white-space: nowrap;
  text-align: center;
  background-color: @badge-bg;
  border-radius: 1em;
}

.smalltext {
  font-size: 0.8em;
}

.center {
  text-align: center;
  padding: 0.5em;
}

.plotHeading {
  text-align: center;
  font-size: 1.5em;
}
.nowrap {
  white-space:nowrap;
}

.viscontrol {
  border: 1px solid #c4c4c4;
  padding: 5px;
}

#vishoverinfo {
  visibility: hidden;
  position: absolute;
  border: 1px solid #c4c4c4;
  background-color: #ffffff;
}

#shell {
  text-align: left;
  color: #55d839;
  border: 1px;
  padding-left: 5px;
  background-color: #000000;
  height: 40em;
  overflow: auto;
  font-family: Monaco, monospace;
  font-size: 100%;
}

#shell span {
  display: inline;
}

#shell input {
  display: inline;
  border: none;
  width: 60%;
  color: #55d839;
  background-color: #000000;
  font-family: Monaco, monospace;
  font-size: 100%;
}

#shell pre {
  font-family: Monaco, monospace;
  font-size: 100%;
}

#login {
  text-align: left;
}

#login table {
  margin-left: 0;
  min-width: 0%;
}

#loginError {
  text-align: left;
  color: red;
}

#filters, #tables {
  /*overflow-y: scroll;*/
  /*height: 100%;*/
  width: 80%;
  margin-left: 15%;
  /*float: left;*/
}

#accumulo-avatar {
  margin: 8px;
  border-radius: 5px;
  width: 32px;
  height: 32px;
}

.center-block {
  width: 100%;
}

.nav-pills > li > a {
  color: #c4c4c4;
}

.nav-pills > li > a:hover, .dropdown.open > a:hover, .dropdown.open > a, .dropdown.open > a:focus {
  background-color: #101010;
}

.dropdown-menu {
  right: 0;
  left: unset;
}

.axis path, .axis line
{
  fill: none;
  stroke: #777;
  shape-rendering: crispEdges;
}

.axis text
{
  font-family: 'Arial';
  font-size: 13px;
}
.tick
{
  stroke-dasharray: 1, 2;
}
.bar
{
  fill: FireBrick;
}

.legend
{
  /*padding: 5px;*/
  font: 10px sans-serif;
  /*background: yellow;
  box-shadow: 2px 2px 1px #888;*/
}

/* gently lighten the bootstrap text color for the navbar */
.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav > li > a {
  color: #d3d3d3;
}

